refactor: Integrate dynamic search repositories, implement restaurant search with manual DTO mapping, and enhance autocomplete logic