@@ -1,8 +1,6 @@
 package com.dongsoop.dongsoop.search.service;
 
-import com.dongsoop.dongsoop.common.exception.authentication.NotAuthenticationException;
 import com.dongsoop.dongsoop.marketplace.entity.MarketplaceType;
-import com.dongsoop.dongsoop.member.service.MemberService;
 import com.dongsoop.dongsoop.search.dto.BoardSearchResult;
 import com.dongsoop.dongsoop.search.dto.RestaurantSearchResult;
 import com.dongsoop.dongsoop.search.dto.SearchDtoMapper;
@@ -12,17 +10,14 @@ import com.dongsoop.dongsoop.search.entity.BoardType;
 import com.dongsoop.dongsoop.search.entity.RestaurantDocument;
 import com.dongsoop.dongsoop.search.repository.BoardSearchRepository;
 import com.dongsoop.dongsoop.search.repository.RestaurantSearchRepository;
-import jakarta.annotation.PostConstruct;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
-import java.util.Locale;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 
@@ -31,242 +26,166 @@ import org.springframework.util.StringUtils;
 @RequiredArgsConstructor
 public class BoardSearchService {
 
-    private static final String ELASTICSEARCH_WARMUP_KEYWORD = "__warmup__";
-
     private final BoardSearchRepository boardSearchRepository;
     private final RestaurantSearchRepository restaurantSearchRepository;
     private final PopularKeywordService popularKeywordService;
-    private final MemberService memberService;
-
-    @PostConstruct
-    public void warmupRepository() {
-        try {
-            boardSearchRepository.count();
-            boardSearchRepository.findByTitleContainingOrContentContaining(
-                    ELASTICSEARCH_WARMUP_KEYWORD,
-                    ELASTICSEARCH_WARMUP_KEYWORD
-            );
-        } catch (Exception e) {
-            logWarmupError(e);
-        }
-    }
-
-    public SearchResponse<RestaurantSearchResult> searchRestaurants(String keyword, Pageable pageable) {
-        String processedKeyword = preprocessKeyword(keyword);
-        if (processedKeyword.isEmpty()) {
-            return createEmptySearchResponse(pageable);
-        }
-
-        //전처리된 키워드로 인기 검색어 집계
-        updateKeywordRedis(processedKeyword);
-
-        Long currentMemberId = null;
-        try {
-            currentMemberId = memberService.getMemberIdByAuthentication();
-        } catch (NotAuthenticationException e) {
-        }
-
-        try {
-            Pageable sortedPageable = createLikeSortPageable(pageable);
-            Page<RestaurantDocument> results = restaurantSearchRepository.searchByKeyword(processedKeyword,
-                    sortedPageable);
-
-            return toRestaurantSearchResponse(results, currentMemberId);
-        } catch (Exception e) {
-            logSearchError("searchRestaurants", processedKeyword, "restaurant", e);
-            return createEmptySearchResponse(pageable);
-        }
-    }
-
-    private Pageable createLikeSortPageable(Pageable pageable) {
-        return PageRequest.of(
-                pageable.getPageNumber(),
-                pageable.getPageSize(),
-                Sort.by(Sort.Direction.DESC, "likeCount")
-        );
-    }
-
-    private SearchResponse<RestaurantSearchResult> toRestaurantSearchResponse(Page<RestaurantDocument> results,
-                                                                              Long memberId) {
-        List<RestaurantSearchResult> dtos = results.getContent().stream()
-                .map(doc -> RestaurantSearchResult.from(doc, memberId))
-                .toList();
-
-        return new SearchResponse<>(
-                dtos,
-                (int) results.getTotalElements(),
-                results.getTotalPages(),
-                results.getNumber(),
-                results.getSize()
-        );
-    }
 
     public Page<BoardDocument> searchByBoardType(String keyword, BoardType boardType, String departmentName,
-                                                 Pageable pageable) {
-        return executeSearchByBoardType(keyword, boardType, departmentName, pageable);
-    }
-
-    public Page<BoardDocument> searchMarketplace(String keyword, MarketplaceType marketplaceType, Pageable pageable) {
+                                                 Pageable pageable) { // 게시판 검색
         String processedKeyword = preprocessKeyword(keyword);
         if (processedKeyword.isEmpty()) {
             return Page.empty(pageable);
         }
+
         updateKeywordRedis(processedKeyword);
 
-        if (marketplaceType != null) {
-            return performMarketplaceSearchByType(processedKeyword, marketplaceType, pageable);
+        return boardSearchRepository.searchDynamic(
+                processedKeyword,
+                boardType.getCode().toUpperCase(),
+                null,
+                departmentName,
+                null,
+                pageable
+        );
+    }
+
+    public Page<BoardDocument> searchMarketplace(String keyword, MarketplaceType marketplaceType,
+                                                 Pageable pageable) { // 장터 검색
+        String processedKeyword = preprocessKeyword(keyword);
+        if (processedKeyword.isEmpty()) {
+            return Page.empty(pageable);
         }
 
-        return performMarketplaceSearch(processedKeyword, pageable);
+        updateKeywordRedis(processedKeyword);
+
+        String mpTypeStr = (marketplaceType != null) ? marketplaceType.name() : null;
+
+        return boardSearchRepository.searchDynamic(
+                processedKeyword,
+                "MARKETPLACE",
+                mpTypeStr,
+                null,
+                null,
+                pageable
+        );
     }
 
     public SearchResponse<BoardSearchResult> searchNoticesByDepartment(String keyword, String authorName,
-                                                                       Pageable pageable) {
+                                                                       Pageable pageable) { // 학과 공지 검색
         String processedKeyword = preprocessKeyword(keyword);
         if (processedKeyword.isEmpty()) {
             return createEmptySearchResponse(pageable);
         }
+
         updateKeywordRedis(processedKeyword);
 
         try {
-            Page<BoardDocument> results = boardSearchRepository.findNoticesByKeywordAndAuthorName(processedKeyword,
-                    authorName, pageable);
+            Page<BoardDocument> results = boardSearchRepository.searchDynamic(
+                    processedKeyword,
+                    "NOTICE",
+                    null,
+                    null,
+                    authorName,
+                    pageable
+            );
             return SearchDtoMapper.toSearchResponse(results);
         } catch (Exception e) {
-            logSearchError("searchNoticesByDepartment", processedKeyword, "notice", e);
+            log.error("Error in searchNoticesByDepartment", e);
             return createEmptySearchResponse(pageable);
         }
     }
 
-    private Page<BoardDocument> executeSearchByBoardType(String keyword, BoardType boardType, String departmentName,
-                                                         Pageable pageable) {
+    public SearchResponse<RestaurantSearchResult> searchRestaurants(String keyword, Pageable pageable) { // 맛집 검색
         String processedKeyword = preprocessKeyword(keyword);
+
+        // 빈 검색어일 경우 빈 결과 반환
         if (processedKeyword.isEmpty()) {
-            return Page.empty(pageable);
+            return new SearchResponse<>(
+                    Collections.emptyList(),
+                    0,
+                    0,
+                    pageable.getPageNumber(),
+                    pageable.getPageSize()
+            );
         }
+
         updateKeywordRedis(processedKeyword);
 
-        if (departmentName == null || departmentName.isEmpty()) {
-            return performSearchByBoardType(processedKeyword, boardType, pageable);
-        }
-
-        return performSearchByBoardTypeAndDepartmentName(processedKeyword, boardType, departmentName, pageable);
-    }
-
-    private Page<BoardDocument> performSearchByBoardType(String keyword, BoardType boardType, Pageable pageable) {
         try {
-            String upperBoardType = boardType.getCode().toUpperCase();
-            return boardSearchRepository.findByKeywordAndBoardType(keyword, upperBoardType, pageable);
+            Page<RestaurantDocument> page = restaurantSearchRepository.searchByKeywordDynamic(processedKeyword,
+                    pageable);
+
+            List<RestaurantSearchResult> content = page.getContent().stream()
+                    .map(doc -> RestaurantSearchResult.from(doc, null))
+                    .toList();
+
+            return new SearchResponse<>(
+                    content,
+                    (int) page.getTotalElements(),
+                    page.getTotalPages(),
+                    page.getNumber(),
+                    page.getSize()
+            );
         } catch (Exception e) {
-            logSearchError("searchByBoardType", keyword, boardType.getCode(), e);
-            return Page.empty(pageable);
+            log.error("Error in searchRestaurants", e);
+            return new SearchResponse<>(
+                    Collections.emptyList(),
+                    0,
+                    0,
+                    pageable.getPageNumber(),
+                    pageable.getPageSize()
+            );
         }
     }
 
-    private Page<BoardDocument> performMarketplaceSearch(String keyword, Pageable pageable) {
-        try {
-            return boardSearchRepository.findMarketplaceByKeyword(keyword, pageable);
-        } catch (Exception e) {
-            logSearchError("searchMarketplace", keyword, null, e);
-            return Page.empty(pageable);
-        }
-    }
-
-    private Page<BoardDocument> performMarketplaceSearchByType(String keyword, MarketplaceType marketplaceType,
-                                                               Pageable pageable) {
-        try {
-            String UpperMarketplaceType = marketplaceType.name().toUpperCase();
-            return boardSearchRepository.findMarketplaceByKeywordAndType(keyword, UpperMarketplaceType, pageable);
-        } catch (Exception e) {
-            logSearchError("searchMarketplaceByType", keyword, marketplaceType.name(), e);
-            return Page.empty(pageable);
-        }
-    }
-
-    private Page<BoardDocument> performSearchByBoardTypeAndDepartmentName(String keyword, BoardType boardType,
-                                                                          String departmentName, Pageable pageable) {
-        try {
-            String upperBoardType = boardType.getCode().toUpperCase();
-            return boardSearchRepository.findByKeywordAndBoardTypeAndDepartmentName(keyword, upperBoardType,
-                    departmentName, pageable);
-        } catch (Exception e) {
-            logSearchError("searchByBoardTypeAndDepartmentName", keyword, boardType.getCode(), e);
-            return Page.empty(pageable);
-        }
-    }
-
-    private <T> SearchResponse<T> createEmptySearchResponse(Pageable pageable) {
-        return new SearchResponse<>(List.of(), 0, 0, pageable.getPageNumber(), pageable.getPageSize());
-    }
-
-    private void logSearchError(String operation, String keyword, String boardType, Exception e) {
-        if (boardType != null) {
-            log.error("Search operation failed - operation: {}, keyword: {}, boardType: {}",
-                    operation, keyword, boardType, e);
-            return;
-        }
-        log.error("Search operation failed - operation: {}, keyword: {}", operation, keyword, e);
-    }
-
-    private void logWarmupError(Exception e) {
-        log.warn("Elasticsearch warmup operation failed", e);
-    }
-
-    private String preprocessKeyword(String keyword) {
+    public List<String> getAutocompleteSuggestions(String keyword, String boardType) { // 자동완성
         if (!StringUtils.hasText(keyword)) {
-            return "";
-        }
-        return keyword.trim().replaceAll("\\s+", " ");
-    }
-
-    // 자동완성 통합 메서드
-    public List<String> getAutocompleteSuggestions(String keyword) {
-        String processedKeyword = preprocessKeyword(keyword);
-        if (processedKeyword.isEmpty()) {
-            return List.of();
+            return Collections.emptyList();
         }
 
-        Pageable pageable = PageRequest.of(0, 5);
-
-        List<BoardDocument> boardResults = boardSearchRepository.findAutocompleteSuggestions(processedKeyword,
-                pageable);
-        List<RestaurantDocument> restaurantResults = restaurantSearchRepository.findAutocompleteSuggestions(
-                processedKeyword,
-                pageable);
+        Pageable pageable = PageRequest.of(0, 10);
         List<String> suggestions = new ArrayList<>();
 
-        boardResults.forEach(doc -> suggestions.add(doc.getTitle()));
-        restaurantResults.forEach(doc -> suggestions.add(doc.getName()));
+        if ("RESTAURANT".equalsIgnoreCase(boardType)) {
+            List<RestaurantDocument> restaurants = restaurantSearchRepository.findAutocompleteSuggestionsDynamic(
+                    keyword, pageable);
+            return restaurants.stream().map(RestaurantDocument::getName).distinct()
+                    .toList();
+        }
 
-        String lowerKeyword = processedKeyword.toLowerCase(Locale.ROOT);
+        if (StringUtils.hasText(boardType)) {
+            List<BoardDocument> documents = boardSearchRepository.findAutocompleteSuggestionsDynamic(keyword, boardType,
+                    pageable);
+            return documents.stream().map(BoardDocument::getTitle).distinct().toList();
+        }
 
-        return suggestions.stream()
-                .distinct()
-                .filter(StringUtils::hasText)
-                .sorted((s1, s2) -> {
-                    boolean s1Starts = s1.toLowerCase(Locale.ROOT).startsWith(lowerKeyword);
-                    boolean s2Starts = s2.toLowerCase(Locale.ROOT).startsWith(lowerKeyword);
+        List<BoardDocument> documents = boardSearchRepository.findAutocompleteSuggestionsDynamic(keyword, null,
+                PageRequest.of(0, 5));
+        suggestions.addAll(documents.stream().map(BoardDocument::getTitle).toList());
 
-                    if (s1Starts && !s2Starts) {
-                        return -1;
-                    }
-                    if (!s1Starts && s2Starts) {
-                        return 1;
-                    }
-                    return s1.compareTo(s2);
-                })
-                .limit(10)
-                .collect(Collectors.toList());
+        List<RestaurantDocument> restaurants = restaurantSearchRepository.findAutocompleteSuggestionsDynamic(keyword,
+                PageRequest.of(0, 5));
+        suggestions.addAll(restaurants.stream().map(RestaurantDocument::getName).toList());
+
+        return suggestions.stream().distinct().toList();
     }
 
-    private void updateKeywordRedis(String keyword) {
+    private String preprocessKeyword(String keyword) { // 검색어 전처리
+        return (keyword == null) ? "" : keyword.trim();
+    }
+
+    private void updateKeywordRedis(String keyword) { // 인기 검색어 갱신
         if (!StringUtils.hasText(keyword)) {
             return;
         }
         try {
-            popularKeywordService.updateKeywordScore(keyword.toLowerCase(Locale.ROOT));
+            popularKeywordService.updateKeywordScore(keyword);
         } catch (Exception e) {
-            log.warn("Failed to update popular keyword score: {}", keyword, e);
+            log.error("Failed to update popular keyword", e);
         }
+    }
+
+    private SearchResponse<BoardSearchResult> createEmptySearchResponse(Pageable pageable) { // 빈 결과 생성
+        return SearchDtoMapper.toSearchResponse(Page.empty(pageable));
     }
 }
